--- a/scripts/update-front-matter.ipynb
+++ b/scripts/update-front-matter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -65,10 +65,13 @@
     "        self.body = content.split('---')[2]\n",
     "        self.fm_vars = OD((l.split(':')[0], l.split(': ')[1]) for l in self.fm.split('\\n') if ': ' in l)\n",
     "    \n",
-    "    def _content(self):\n",
+    "    def head(self):\n",
     "        return ('---\\n' +\n",
     "            '\\n'.join([k+': '+v for k, v in self.fm_vars.iteritems()]) +\n",
-    "            '\\n---' + self.body)\n",
+    "            '\\n---')\n",
+    "    \n",
+    "    def _content(self):\n",
+    "        return self.head() + self.body\n",
     "\n",
     "    def __str__(self):\n",
     "        return self._content()\n",
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -98,234 +101,21 @@
     "        print fn\n",
     "        raise e\n",
     "    else:\n",
-    "        if 'description' in p.fm_vars:\n",
-    "            if 'href' not in p.fm_vars['description'] and '\"' in p.fm_vars:\n",
-    "                p.fm_vars['description'] = p.fm_vars['description'].replace('\"', '')\n",
-    "                p.save()"
+    "        if 'permalink' in p.fm_vars and 'javascript-graphing' in p.fm_vars['permalink']:\n",
+    "            p.fm_vars['redirect_from'] = p.fm_vars['permalink']\n",
+    "            p.fm_vars['permalink'] = p.fm_vars['permalink'].replace('javascript-graphing-library', 'javascript')\n",
+    "            p.save()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "walknroll(process_posts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "p = Post('../_posts/plotly_js/histogram2d/2015-04-09-2d-histogram.html')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Post('../_posts/plotly_js/histogram2d/2015-04-09-2d-histogram.html')"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "name: 2D Histogram of a Bivariate Normal Distribution\n",
-      "plot_url: https://plot.ly/~PlotBot/77\n",
-      "language: plotly_js\n",
-      "suite: histogram2d\n",
-      "order: 0\n",
-      "sitemap: false\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print p.fm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'python'"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p.fm_vars.get('language')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fm = c.split('---')[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from collections import OrderedDict as OD\n",
-    "ov = OD((l.split(':')[0], l.split(': ')[1]) for l in fm.split('\\n') if ': ' in l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: Rectangle Positioned Relative to the Plot & to the Axes\n",
-      "plot_url: https://plot.ly/~neda/4209\n",
-      "language: python\n",
-      "suite: shape\n",
-      "order: 9\n",
-      "sitemap: false\n"
-     ]
-    }
-   ],
-   "source": [
-    "print '\\n'.join([k+': '+v for k, v in ov.iteritems()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---\n",
-      "name: Rectangle Positioned Relative to the Plot & to the Axes\n",
-      "plot_url: https://plot.ly/~neda/4209\n",
-      "language: python\n",
-      "suite: shape\n",
-      "order: 9\n",
-      "sitemap: false\n",
-      "---\n",
-      "import plotly.plotly as py\n",
-      "from plotly.graph_objs import *\n",
-      "\n",
-      "trace0 = Scatter(\n",
-      "    x=[1.5, 3],\n",
-      "    y=[2.5, 2.5],\n",
-      "    text=['Rectangle</br>reference to the plot', 'Rectangle</br>reference to the axes'],\n",
-      "    mode='text',\n",
-      ")\n",
-      "data = Data([trace0])\n",
-      "layout = {\n",
-      "    'xaxis': {\n",
-      "        'range': [0, 4],\n",
-      "        'showgrid': False,\n",
-      "    },\n",
-      "    'yaxis': {\n",
-      "        'range': [0, 4]\n",
-      "    },\n",
-      "    'width': 600,\n",
-      "    'height': 600,\n",
-      "    'shapes': [\n",
-      "        # Rectangle reference to the axes\n",
-      "        {\n",
-      "            'type': 'rect',\n",
-      "            'xref': 'x',\n",
-      "            'yref': 'y',\n",
-      "            'x0': 2.5,\n",
-      "            'y0': 0,\n",
-      "            'x1': 3.5,\n",
-      "            'y1': 2,\n",
-      "            'line': {\n",
-      "                'color': 'rgb(55, 128, 191)',\n",
-      "                'width': 3,\n",
-      "            },\n",
-      "            'fillcolor': 'rgba(55, 128, 191, 0.6)',\n",
-      "        },\n",
-      "        # Rectangle reference to the plot\n",
-      "        {\n",
-      "            'type': 'rect',\n",
-      "            'xref': 'paper',\n",
-      "            'yref': 'paper',\n",
-      "            'x0': 0.25,\n",
-      "            'y0': 0,\n",
-      "            'x1': 0.5,\n",
-      "            'y1': 0.5,\n",
-      "            'line': {\n",
-      "                'color': 'rgb(50, 171, 96)',\n",
-      "                'width': 3,\n",
-      "            },\n",
-      "            'fillcolor': 'rgba(50, 171, 96, 0.6)',\n",
-      "        },\n",
-      "    ]\n",
-      "}\n",
-      "fig = {\n",
-      "    'data': data,\n",
-      "    'layout': layout,\n",
-      "}\n",
-      "plot_url = py.plot(fig, validate=False, filename='shapes-rectangle-ref')\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print open('../_posts/python/shapes/2015-06-17-shape-rect-ref.html').read()"
    ]
   },
   {
