--- a/_posts/pandas/finance/candlestick-charts.ipynb
+++ b/_posts/pandas/finance/candlestick-charts.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
        "'1.8.3'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,12 +188,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Adding a Trace to a Candlestick Chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6204.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "from plotly.tools import FigureFactory as FF\n",
+    "from plotly.graph_objs import *\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "import pandas.io.data as web\n",
+    "\n",
+    "# Create Candlestick\n",
+    "df = web.DataReader(\"aapl\", 'yahoo', datetime(2007, 10, 1), datetime(2008, 3, 31))\n",
+    "fig = FF.create_candlestick(df.Open, df.High, df.Low, df.Close, dates=df.index)\n",
+    "\n",
+    "# Create Line of open values\n",
+    "add_line = Scatter(\n",
+    "    x=df.index, \n",
+    "    y=df.Open, \n",
+    "    name= 'Open Vals', \n",
+    "    line=Line(color='black')\n",
+    "    )\n",
+    "\n",
+    "fig['data'].extend([add_line])\n",
+    "py.iplot(fig, filename='candlestick_and_trace', validate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Simple Example with `datetime` Objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +260,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -268,37 +321,37 @@
        "    <tr>\n",
        "      <th>2015-01-01 00:00:00+00:00</th>\n",
        "      <td>100.000000</td>\n",
-       "      <td>101.873019</td>\n",
-       "      <td>79.734743</td>\n",
-       "      <td>95.761095</td>\n",
+       "      <td>122.056609</td>\n",
+       "      <td>90.101734</td>\n",
+       "      <td>111.975600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-02 00:00:00+00:00</th>\n",
-       "      <td>96.770434</td>\n",
-       "      <td>96.770434</td>\n",
-       "      <td>83.303699</td>\n",
-       "      <td>86.371414</td>\n",
+       "      <td>112.033217</td>\n",
+       "      <td>123.685550</td>\n",
+       "      <td>98.948680</td>\n",
+       "      <td>104.903613</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-03 00:00:00+00:00</th>\n",
-       "      <td>86.221527</td>\n",
-       "      <td>102.593213</td>\n",
-       "      <td>84.885404</td>\n",
-       "      <td>97.927904</td>\n",
+       "      <td>104.917966</td>\n",
+       "      <td>110.087204</td>\n",
+       "      <td>83.225349</td>\n",
+       "      <td>90.412981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-04 00:00:00+00:00</th>\n",
-       "      <td>98.549792</td>\n",
-       "      <td>118.511315</td>\n",
-       "      <td>98.215290</td>\n",
-       "      <td>115.818097</td>\n",
+       "      <td>91.655021</td>\n",
+       "      <td>92.522185</td>\n",
+       "      <td>67.021909</td>\n",
+       "      <td>68.099935</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-05 00:00:00+00:00</th>\n",
-       "      <td>116.851410</td>\n",
-       "      <td>116.851410</td>\n",
-       "      <td>67.750435</td>\n",
-       "      <td>68.372019</td>\n",
+       "      <td>68.786952</td>\n",
+       "      <td>79.676272</td>\n",
+       "      <td>65.847347</td>\n",
+       "      <td>69.981895</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -306,14 +359,14 @@
       ],
       "text/plain": [
        "                                 open        high        low       close\n",
-       "2015-01-01 00:00:00+00:00  100.000000  101.873019  79.734743   95.761095\n",
-       "2015-01-02 00:00:00+00:00   96.770434   96.770434  83.303699   86.371414\n",
-       "2015-01-03 00:00:00+00:00   86.221527  102.593213  84.885404   97.927904\n",
-       "2015-01-04 00:00:00+00:00   98.549792  118.511315  98.215290  115.818097\n",
-       "2015-01-05 00:00:00+00:00  116.851410  116.851410  67.750435   68.372019"
+       "2015-01-01 00:00:00+00:00  100.000000  122.056609  90.101734  111.975600\n",
+       "2015-01-02 00:00:00+00:00  112.033217  123.685550  98.948680  104.903613\n",
+       "2015-01-03 00:00:00+00:00  104.917966  110.087204  83.225349   90.412981\n",
+       "2015-01-04 00:00:00+00:00   91.655021   92.522185  67.021909   68.099935\n",
+       "2015-01-05 00:00:00+00:00   68.786952   79.676272  65.847347   69.981895"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -339,13 +392,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6084.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6206.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -560,15 +613,6 @@
     "    thumbnail='/images/candlestick.png', language='pandas',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=21)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
